--- a/home_screen.css
+++ b/home_screen.css
@@ -1,31 +1,31 @@
 /* The sidebar menu */
 .sidenav {
     height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 19.79166%; /* Set the width of the sidebar */
+    width: 290px; /* Set the width of the sidebar */
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 0;
     background-color: #0E0B16; /* Black */
     overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
     border-right: 1px solid #7E5DF9;
   }
   
   /* The navigation menu links */
   .sidenav a {
     text-decoration: none;
-    font-size: 28;
+    font-size: 26px;
     font-family: 'Chakra Petch', sans-serif, '300';
     color: #7E5DF9;
     display: block;
+    line-height: 40px;
   }
   
   
   /* Style page content */
   .main {
-    margin-left: 160px; /* Same as the width of the sidebar */
-    padding: 0px 10px;
+    margin-left: 290px; /* Same as the width of the sidebar */
+    padding: 0px 0px;
   }
   
   /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
@@ -35,13 +35,13 @@
   }
 
   .jonas_headshot{
-    margin-top: 6.296296296%;
+    margin-top: 40px;
     text-align: center;
   }
 
   .headshot{
-    height: 200px;
-    width: 200px;
+    height: 180px;
+    width: 180px;
     border-radius: 50%;
     border: 3px solid #7E5DF9; 
   }
@@ -51,20 +51,27 @@
     text-align: center;
     font-size: 40px;
     color: #7E5DF9;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 
   .job{
     font-family: 'Chakra Petch', sans-serif, '300';
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     color: #E7DFDD;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   .main_menu{
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
     text-align: center;
-    margin-top: 40.11111%;
-    left: 6.40625%;
     font-size: 25px;
+
   }
 
 
@@ -78,8 +85,8 @@
     font-size: 60px;
     color: #E7DFDD;
     position: fixed;
-    top: 15.895833333%;
-    left: 26.574074074%;
+    top: 137px;
+    left: 408px;
   }
 
   .introduction_text{
@@ -113,11 +120,7 @@
   }
 
   .language{
-    position: absolute;
-    left: 50%;
-    bottom: 25px;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
+    margin-top: 10px;
   }
 
   .language a{
@@ -127,9 +130,44 @@
   .portuguese, .english{
     height: 20px;
     width: 30px;
-   
+  }
+
+  .content_contact_page{
+    font-family: 'Chakra Petch', sans-serif, '300';
+    width: 700px;
+    height: 110px;
+    text-align: justify;
+    font-size: 22px;
+    color: #E7DFDD;
+    position: fixed;
+    top: 20%;
+    left: 25%;
+  }
+
+  
+  .contact_links{
+    position: fixed;
+    top: 37%;
+    left: 27%;
+  }
+
+  .contact_links a{
+      text-decoration: none;
+      font-size: 22px;
+      font-family: 'Chakra Petch', sans-serif, '300';
+      color: #7E5DF9;
+      display: block;
+      line-height: 50px;
+  }
+
+  .email_icon, .github_icon, .linkedin_icon{
+    height: 50px;
+    width: 50px;
+    float: left; 
+    margin-right: 10px;
     
   }
+
   
 
   
