--- a/home_screen.css
+++ b/home_screen.css
@@ -1,3 +1,6 @@
+html { 
+  overflow-y: scroll; 
+}
 /* The sidebar menu */
 .sidenav {
     height: 100%; /* Full-height: remove this if you want "auto" height */
@@ -28,7 +31,9 @@
   .main {
     margin-left: 20%; /* Same as the width of the sidebar */
     padding: 0px 0px;
-    overflow: auto;
+    top: 0%;
+    bottom: 0%;
+    overflow-y: scroll;
   }
   
   /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
@@ -79,6 +84,8 @@
 
   body{
       background-color: #0E0B16;
+      position: absolute;
+      overflow-y: scroll;
   }
 
   .hi{
@@ -137,7 +144,7 @@
 
   .content_contact_page{
     font-family: 'Chakra Petch', sans-serif, '300';
-    width: 55%;
+    width: 65%;
     height: 75%;
     text-align: justify;
     font-size: 1.25em;
@@ -173,7 +180,7 @@
 
   .content_about_page{
     font-family: 'Chakra Petch', sans-serif, '300';
-    width: 55%;
+    width: 65%;
     height: 75%;
     text-align: justify;
     font-size: 1.25em;
@@ -191,15 +198,14 @@
 
   .item_content{
     font-family: 'Chakra Petch', sans-serif, '300';
-    width: 55%;
-    height: 75%;
+    width: 65%;
+    position:fixed;
     text-align: justify;
     font-size: 1.25em;
     color: #E7DFDD;
-    position: fixed;
     top: 12%;
+    bottom: 0;
     left: 25%;
-    overflow:auto;
   }
 
   h3{
@@ -211,13 +217,21 @@
     top: 10%;
     left: 25%;
     margin-block-end: 0em;
+    margin-block-start: 50px;
   }
 
-  .hiking_image{
+  .about_item_contents{
+    margin-block-end: 0;
+    margin-block-start: 50px;
+  }
+
+  .item_image{
     float: left;
     height: 20%;
     width: 20%;
-    margin-right: 10px;
+    margin-right: 20px;
+    border-radius: 20px;
+    border: 3px solid #7E5DF9; 
 
   }
 
