--- a/home_screen.css
+++ b/home_screen.css
@@ -31,7 +31,7 @@
     padding: 0px 0px;
     top: 0%;
     bottom: 0%;
-    overflow-y: scroll;
+    overflow-y: hidden;
   }
   
 
@@ -66,8 +66,9 @@
   }
 
   .main_menu{
-    position: absolute;
-    bottom: 0px;
+    position: relative;
+    bottom: -webkit-calc(-100% + 80%);
+    bottom:calc(-100% + 80%);
     left: 0px;
     right: 0px;
     text-align: center;
@@ -104,11 +105,11 @@
     text-align: center;
     font-size: 4em;
     color: #E7DFDD;
-    position: absolute;
-    top: 2%;
-    left: 25%;
+    position: relative;
     margin: 0%;
-    z-index: 1;
+    margin-left: 20px;
+    overflow: hidden;
+    float: left;
   }
 
   .vector_image{
@@ -116,7 +117,7 @@
     bottom: 0; 
     right: 0;
     height: 40%;
-    width: 20%;
+    width: auto;
   }
 
   .language{
@@ -134,7 +135,7 @@
   }
   
   .contact_links{
-    position: fixed;
+    position: relative;
     margin-top: 0.5em;
   }
 
@@ -148,8 +149,8 @@
   }
 
   .email_icon, .github_icon, .linkedin_icon{
-    height: 8%;
-    width: 8%;
+    height: 5%;
+    width: 5%;
     float: left; 
     margin-right: 10px;
     
@@ -157,15 +158,17 @@
 
   .page_content{
     font-family: 'Chakra Petch', sans-serif, '300';
-    width: 65%;
-    height: 75%;
+    position: relative;
+    height: 100%;
+    width: 80%;
     text-align: justify;
     font-size: 1.25em;
     color: #E7DFDD;
-    position: absolute;
-    top: 12%;
-    left: 25%;
     bottom: 0;
+    margin-left: 20px;
+    margin-top: 100px;
+    margin-right: 50px;
+    overflow: visible;
   }
 
   .resume_link{
@@ -179,8 +182,6 @@
     font-family: 'Chakra Petch', sans-serif, '300';
     color: #7E5DF9;
     display: block;
-    top: 10%;
-    left: 25%;
     margin-block-end: 0em;
     margin-block-start: 50px;
   }
@@ -191,18 +192,20 @@
   }
 
   .item_wrapper{
-    position: relative;
-    height: 30%;
+    height: 20%;
+    width: auto; 
+    display: inline-block;
   }
 
   .item_image{
     float: left;
-    height: 100%;
-    width: auto;
+    max-width: 20%;
+    max-height: auto;
+    margin-top: 20px;
     margin-right: 20px;
     border-radius: 20px;
-    border: 3px solid #7E5DF9;
-    
+    border: 3px solid #7E5DF9;  
+    object-fit: cover;
   }
 
   
